// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionStatus > should add tooltip info if it receives an error message and the related property is set 1`] = `
<span
  class="dusk-badge dusk-badge--variant-error transaction-status"
  data-tooltip-id="main-tooltip"
  data-tooltip-text="Transaction failed"
  data-tooltip-type="error"
>
  failed
</span>
`;

exports[`TransactionStatus > should pass additional class names to the rendered \`Badge\` component 1`] = `
<span
  class="dusk-badge dusk-badge--variant-success transaction-status foo bar"
>
  success
</span>
`;

exports[`TransactionStatus > should render the status as error if it receives an error message 1`] = `
<span
  class="dusk-badge dusk-badge--variant-error transaction-status"
>
  failed
</span>
`;

exports[`TransactionStatus > should render the transaction status 1`] = `
<span
  class="dusk-badge dusk-badge--variant-success transaction-status"
>
  success
</span>
`;

exports[`TransactionStatus > shouldn't add tooltip info if there's no error message, even if the related property is set to \`true\` 1`] = `
<span
  class="dusk-badge dusk-badge--variant-success transaction-status"
>
  success
</span>
`;
